<resources>
    <string name="app_name">碧蓝图鉴</string>
    <string name="action_settings">Settings</string>
    <string name="exit_app_desc">退出碧蓝图鉴</string>
    <string name="setting_desc">设置</string>
    <!--  底部导航栏  -->
    <string name="title_notice">公告</string>
    <string name="title_wiki">百科</string>

    <!-- 设置 -->
    <string name="title_activity_settings">设置</string>
    <string name="settings_theme">主题</string>
    <string name="settings_theme_color">颜色主题</string>
    <string name="settings_theme_flag">阵营旗帜</string>
    <string name="settings_theme_dark_launcher_font">启动页深色字体</string>
    <string name="settings_theme_dark_status_bar">深色状态栏</string>
    <string name="settings_wiki">百科</string>
    <string name="settings_wiki_location">百科地址</string>
    <string name="settings_wiki_timeout">连接超时</string>
    <string name="settings_update">更新</string>
    <string name="settings_update_check">检查更新</string>

    <!--  web Activity  -->
    <string name="web_activity_refreshPage">刷新页面</string>
    <string name="web_activity_copyLink">复制链接</string>
    <string name="web_activity_shareLink">分享链接</string>
    <string name="web_activity_openByBrowser">用浏览器打开</string>

    <!--  wiki  -->
    <string name="wiki_ship">舰船图鉴</string>

    <!--  ship wiki  -->
    <string name="ship_wiki_filter">筛选</string>
    <string name="ship_wiki_filter_all">查看全部</string>
    <string name="ship_wiki_filter_type">类别</string>
    <string name="ship_wiki_filter_rate">稀有度</string>
    <string name="ship_wiki_filter_camp">阵营</string>
    <string name="ship_wiki_filter_armor">装甲</string>
    <string name="ship_wiki_filter_max_cost">最大消耗</string>
    <string name="ship_wiki_filter_main_category">主分类</string>
    <string name="ship_wiki_filter_sub_category">次分类</string>

    <!--  舰船列表属性提示  -->
    <string name="ship_wiki_list_value_tip_durable">耐久:</string>
    <string name="ship_wiki_list_value_tip_reload">装填:</string>
    <string name="ship_wiki_list_value_tip_shelling">炮击:</string>
    <string name="ship_wiki_list_value_tip_torpedo">雷击:</string>
    <string name="ship_wiki_list_value_tip_maneuver">机动:</string>
    <string name="ship_wiki_list_value_tip_antiAircraft">防空:</string>
    <string name="ship_wiki_list_value_tip_aviation">航空:</string>
    <string name="ship_wiki_list_value_tip_cost">消耗:</string>
    <string name="ship_wiki_list_value_tip_antiSubmarine">反潜:</string>
    <string name="ship_wiki_list_value_tip_lucky">幸运:</string>
    <string name="ship_wiki_list_value_tip_speed">航速:</string>
    <string name="ship_wiki_list_value_tip_oxygen">氧气:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>
