<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/settings_theme">
        <ListPreference android:title="@string/settings_theme_color"
            android:key="theme"
            android:entries="@array/settings_theme_color_title"
            android:entryValues="@array/settings_theme_color_value"
            android:defaultValue="BLHX_LIGHT"/>
        <ListPreference android:title="@string/settings_theme_flag"
            android:key="flag"
            android:entries="@array/settings_theme_flag_title"
            android:entryValues="@array/settings_theme_flag_value"
            android:defaultValue="USS"/>
        <SwitchPreference app:title="@string/settings_theme_dark_launcher_font"
            android:key="isLauncherDarkFont"
            android:defaultValue="false" />
        <SwitchPreference android:title="@string/settings_theme_dark_status_bar"
            android:key="isDarkStatusBar"
            android:defaultValue="false"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_wiki">
        <EditTextPreference android:title="@string/settings_wiki_location"
            android:key="wikiURL"
            android:defaultValue="https://wiki.biligame.com"/>
        <ListPreference android:title="@string/settings_wiki_timeout"
            android:key="timeout"
            android:entries="@array/settings_wiki_timeout_title"
            android:entryValues="@array/settings_wiki_timeout_value"
            android:defaultValue="3000"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_update">
        <Preference android:key="currentVersion"
            tools:title="当前版本：V1.0.0"/>
        <Preference android:title="@string/settings_update_check"
            android:key="checkUpdate"/>
    </PreferenceCategory>

</PreferenceScreen>
